<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.lightning.exp1_098.MainActivity">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:background="@drawable/content_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:padding="15dp"
            android:textColor="@color/title"
            android:text="@string/foodDelight"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
    <TextView
        style="@style/nav_tabs"
        android:id="@+id/todayspecial"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/today" />

    <TextView
        style="@style/nav_tabs"
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/menu" />

    <TextView
        style="@style/nav_tabs"
        android:id="@+id/delightoffers"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/offers" />

    <TextView
        style="@style/nav_tabs"
        android:id="@+id/letsorder"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/letsOrder" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="195dp"
        android:layout_margin="10dp"
        android:elevation="3dp"
        android:src="@drawable/friends_off" />
</LinearLayout>
</ScrollView>